--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Pentameter VF";
-  src: url(fonts/Pentameter-VF.woff2);
+  src: url(fonts/PentameterVF.woff2);
 }
 @font-face {
   font-family: "Prensa";
@@ -11,12 +11,45 @@
   font-style: italic;
   src: url(fonts/Prensa-BookItalic.woff2);
 }
-body {
-  font-size: 20px;
-  font-family: "Prensa";
+@font-face {
+  font-family: "Magmatic VF";
+  font-style: normal;
+  src: url(fonts/Magmatic-VF.woff2);
+}
+@font-face {
+  font-family: "Allium Text";
+  font-style: normal;
+  font-weight: 500;
+  src: url(fonts/AlliumText-Medium.woff2);
+}
+* {
+  box-sizing: border-box;
+  font-variation-settings: "wdth" var(--wdth), "wght" var(--wght), "XHGT" var(--XHGT);
 }
 
-.pentameter, .remark-slide-content figcaption, .remark-slide-content h5, .remark-slide-content h4 {
+:root {
+  --bgcolor: rgb(240 240 240);
+  --txtcolor: rgb(40 40 250);
+  --linkcolor: rgb(200 80 0);
+  --pad: 20px;
+  --contentpad: 40px;
+  --small: 1.5rem;
+  --default: 45px;
+  --medium: 70px;
+  --large: 90px;
+  --wdth: 105;
+  --wght: 350;
+  --XHGT: 0;
+}
+
+body {
+  font-size: 20px;
+  font-family: "Magmatic VF", sans-serif;
+  letter-spacing: 0.03em;
+  color: white;
+}
+
+.pentameter {
   font-family: "Pentameter VF";
   font-variation-settings: "wdth" var(--wdth), "wght" var(--wght), "slnt" var(--slnt);
 }
@@ -25,161 +58,153 @@ body {
   display: none;
 }
 
-.remark-slide-content {
-  padding: 1em 2em;
-  background-color: white;
-  background-size: cover;
-  color: black;
+footer {
+  --wdth: 140;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  width: calc( 100% - 2 * var(--contentpad) );
+  display: flex;
+  border-top: 2px solid var(--linkcolor);
+  padding: var(--pad) 0;
+  display: flex;
+  text-align: left;
+  justify-content: space-between;
 }
-.remark-slide-content h1, .remark-slide-content h2, .remark-slide-content h3, .remark-slide-content h4, .remark-slide-content h5 {
+footer .runner-1 {
+  flex: 1;
+}
+footer .runner-2 {
+  flex: 1;
+}
+
+.remark-slide-content {
+  position: relative;
+  padding: var(--contentpad);
+  background-color: var(--bgcolor);
+  background-size: cover;
+  color: var(--txtcolor);
+}
+.remark-slide-content h1, .remark-slide-content h2, .remark-slide-content h3, .remark-slide-content h4, .remark-slide-content h5, .remark-slide-content p {
   font-weight: normal;
   margin: 0;
-  padding-bottom: 1rem;
 }
 .remark-slide-content em {
-  font-style: italic;
+  font-style: normal;
+  color: var(--linkcolor);
 }
 .remark-slide-content .center h1, .remark-slide-content .center h2 {
   width: 80%;
   margin: auto;
 }
-.remark-slide-content h1, .remark-slide-content h2 {
-  margin-top: 2rem;
-}
 .remark-slide-content h1 {
-  font-size: 5rem;
-  line-height: 0.9;
+  font-size: var(--large);
+  --wght: 200;
+  line-height: 1;
+  margin-bottom: var(--contentpad);
 }
 .remark-slide-content h2 {
-  font-size: 3rem;
+  font-size: var(--medium);
   line-height: 1;
+  margin-bottom: var(--pad);
 }
 .remark-slide-content h3 {
-  font-size: 3rem;
+  font-size: var(--medium);
   line-height: 1.2;
 }
 .remark-slide-content h4 {
-  font-size: 1.5rem;
-  --wdth: 100;
-  --wght: 400;
-  --slnt: 0;
-  text-transform: uppercase;
-  padding-bottom: 0.5rem;
-  letter-spacing: 0.05em;
+  font-size: var(--small);
+  --wdth: 120;
 }
 .remark-slide-content h5 {
-  margin-top: 1rem;
-  font-size: 1.5rem;
-  --wdth: 100;
-  --wght: 400;
-  --slnt: 8;
+  font-size: var(--small);
+  --wdth: 120;
+  line-height: 1.5;
 }
 .remark-slide-content p, .remark-slide-content li {
-  font-size: 2rem;
-  margin: 0;
+  font-size: var(--default);
+  line-height: 1.3;
+  padding-bottom: var(--pad);
 }
-.remark-slide-content figcaption {
-  font-size: 1.5rem;
+.remark-slide-content .figure, .remark-slide-content figcaption {
+  font-size: var(--small);
   line-height: 1.5;
+  --wdth: 120;
   margin-top: 1rem;
-  --wdth: 110;
-  --wght: 500;
-  --slnt: 0;
 }
-.remark-slide-content.quote h3 {
+.remark-slide-content .figure {
+  border-radius: 5px;
+  background: white;
+  padding: var(--pad);
+  position: absolute;
+  width: 40%;
+  height: calc( 100% - 4 * var(--contentpad) );
+  top: var(--contentpad);
+  right: var(--contentpad);
+}
+.remark-slide-content.quote p {
   width: 85%;
-}
-.remark-slide-content.mix li {
-  background: transparent;
+  font-size: var(--default);
+  --wght: 250;
+  line-height: 1.3;
+  text-indent: -0.5em;
 }
 .remark-slide-content a {
-  color: blue;
+  color: var(--linkcolor);
   text-decoration: none;
-  border-bottom: 1px solid blue;
+  border-bottom: 0.05em solid var(--linkcolor);
 }
 .remark-slide-content a:hover {
   text-decoration: none;
 }
-.remark-slide-content.quote h3 {
-  text-indent: -0.5em;
-}
-
-.mix {
-  background-color: blue;
+.remark-slide-content.mix {
+  background-color: var(--txtcolor);
   background-blend-mode: screen;
 }
-
-.caption {
-  text-align: right;
-  margin-top: 1rem;
-  display: block;
-  font-size: 0.7em;
-}
-
-ul {
+.remark-slide-content ul {
   padding-left: 0;
-  display: flex;
 }
-
-li {
-  flex: 1;
+.remark-slide-content li {
   list-style-type: none;
 }
-
-li:first-child {
-  margin-right: 2rem;
+.remark-slide-content.cols ul {
+  display: flex;
+}
+.remark-slide-content.cols ul li {
+  flex: 1;
+}
+.remark-slide-content.cols ul li img {
+  margin-left: 0;
+  max-width: 90%;
 }
 
 .section {
-  background: blue;
+  background: var(--txtcolor);
   color: white;
 }
 
-.live {
-  animation: pulse 1s ease-in-out alternate infinite;
+.numbered {
+  padding-left: 5rem;
+}
+.numbered li {
+  list-style-type: decimal;
+  font-size: var(--medium);
 }
 
-@keyframes pulse {
-  from {
-    text-shadow: none;
-  }
-  to {
-    text-shadow: 5px 5px 10px white;
-  }
-}
 .grey {
   background: gainsboro;
 }
 
 .ra {
-  background: black;
+  background: #141414;
   color: white;
 }
 
 img, video {
   margin: auto;
   display: block;
-  max-height: 600px;
+  max-height: 520px;
   max-width: 100%;
-}
-
-ul.cols {
-  display: flex;
-  list-style-type: none;
-  padding-left: 0;
-}
-
-ul li {
-  margin-right: 1rem;
-}
-
-ul li:last-child {
-  margin-right: 0;
-}
-
-#the-team + .cols li {
-  flex: none;
-  width: 25%;
 }
 
 .rangebox {
@@ -191,13 +216,13 @@ ul li:last-child {
   top: 50%;
   height: 2px;
   margin: 0 25px;
-  border-top: 5px solid blue;
+  border-top: 5px solid var(--linkcolor);
 }
 
 .line::after {
   content: ">";
   font-size: 50px;
-  color: blue;
+  color: var(--linkcolor);
   font-weight: bold;
   position: absolute;
   right: -12px;
@@ -230,6 +255,39 @@ ul li:last-child {
   top: 50%;
   left: 50%;
   line-height: 0.1;
+}
+#cloud a {
+  border: 0;
+  color: var(--txtcolor);
+}
+
+.kern-pair {
+  line-height: 1.1;
+  font-size: 200px;
+  text-align: center;
+  animation: kern 800ms linear alternate infinite;
+}
+
+@keyframes kern {
+  from {
+    font-kerning: none;
+  }
+  to {
+    font-kerning: normal;
+  }
+}
+.proof-pair {
+  font-size: 50px;
+  line-height: 1.5;
+}
+
+@keyframes show {
+  from {
+    visibility: hidden;
+  }
+  to {
+    visibility: visible;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
