--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 @font-face{
   font-family: 'Pentameter VF';
-  src: url(fonts/Pentameter-VF.woff2);
+  src: url(fonts/PentameterVF.woff2);
 }
 @font-face{
   font-family: 'Prensa';
@@ -11,9 +11,46 @@
   font-style: italic;
   src: url(fonts/Prensa-BookItalic.woff2);
 }
+
+@font-face{
+  font-family: 'Magmatic VF';
+  font-style: normal;
+  src: url(fonts/Magmatic-VF.woff2);
+}
+
+@font-face{
+  font-family: 'Allium Text';
+  font-style: normal;
+  font-weight: 500;
+  src: url(fonts/AlliumText-Medium.woff2);
+}
+
+*{
+  box-sizing: border-box;
+  font-variation-settings: 'wdth' var(--wdth), 'wght' var(--wght), 'XHGT' var(--XHGT);
+}
+:root{
+  --bgcolor: rgb(240 240 240);
+  --txtcolor: rgb(40 40 250);
+  --linkcolor: rgb(200 80 0);
+  --pad: 20px;
+  --contentpad: 40px;
+  --small: 1.5rem;
+  --default: 45px;
+  --medium: 70px;
+  --large: 90px;
+
+  --wdth: 105;
+  --wght: 350;
+  --XHGT: 0;
+}
+
 body {
   font-size: 20px;
-  font-family: 'Prensa';
+  // font-family: 'Prensa';
+  font-family: 'Magmatic VF', sans-serif;
+  letter-spacing: 0.03em;
+  color: white;
 }
 .pentameter{
   font-family: 'Pentameter VF';
@@ -22,176 +59,174 @@ body {
 .remark-slide-number {
   display: none;
 }
+footer{
+  --wdth: 140;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  width: calc( 100% - 2 * var(--contentpad) );
+  display: flex;
+  border-top: 2px solid var(--linkcolor);
+  padding: var(--pad) 0;
+  display: flex;
+  text-align: left;
+  justify-content: space-between;
+  .runner-1{
+    flex: 1;
+  }
+  .runner-2{
+    flex: 1;
+  }
+}
 .remark-slide-content {
-  padding: 1em 2em;
-  background-color: white;
+  position: relative;
+  padding: var(--contentpad);
+  background-color: var(--bgcolor);
   background-size: cover;
-  color: black;
+  color: var(--txtcolor);
 
-
-  h1, h2, h3, h4, h5{
+  h1, h2, h3, h4, h5, p{
     font-weight: normal;
     margin: 0;  
-    padding-bottom: 1rem;
     // font-family: 'Pentameter VF';
     // font-variation-settings: "wdth" 100, "wght" 300, "slnt" 10;
   }
   em{
-    font-style: italic;
+    font-style: normal;
+    color: var(--linkcolor);
   }
   .center h1, .center h2{
     width: 80%;
     margin: auto;
   }
 
-  h1,h2{
-    margin-top: 2rem;
-  }
   h1{
-    font-size: 5rem;
-    line-height: 0.9;
+    font-size: var(--large);
+    --wght: 200;
+    line-height: 1.0;
+    margin-bottom: var(--contentpad);
   }
   h2{
-    font-size: 3rem;
+    font-size: var(--medium);
     line-height: 1.0;
+    margin-bottom: var(--pad);
   }
   h3{
-    font-size: 3rem;
+    font-size: var(--medium);
     line-height: 1.2;
   }
   h4{
-    font-size: 1.5rem;
-    @extend .pentameter;
-
-    --wdth: 100;
-    --wght: 400;
-    --slnt: 0;
-    text-transform: uppercase;
-    padding-bottom: 0.5rem;
-    letter-spacing: 0.05em;
+    font-size: var(--small);
+    --wdth: 120;
+    // font-family: "Allium Text";
   }
   h5{
-    margin-top: 1rem;
-    font-size: 1.5rem;   
-    @extend .pentameter;
-
-    --wdth: 100;
-    --wght: 400;
-    --slnt: 8;
+    font-size: var(--small);  
+    --wdth: 120; 
+    // font-family: "Allium Text";
+    line-height: 1.5;
   }
 
   p, li{
-    font-size: 2rem;
-    margin: 0;
+    font-size: var(--default);
+    line-height: 1.3;
+    padding-bottom: var(--pad);
   }
-  figcaption{
-    font-size: 1.5rem;
+  .figure, figcaption{
+    font-size: var(--small);
     line-height: 1.5;
-    @extend .pentameter;
+    // font-family: "Allium Text";
+    --wdth: 120;
     margin-top: 1rem;
-    --wdth: 110;
-    --wght: 500;
-    --slnt: 0;
-  }
-  &.quote h3{
-    width: 85%;
   }
 
-  &.mix li{
-    background: transparent;
+  .figure{
+    border-radius: 5px;
+    background: white;
+    padding: var(--pad);
+    position: absolute;
+    width: 40%;
+    height: calc( 100% - 4 * var(--contentpad) );
+    top: var(--contentpad);
+    right: var(--contentpad);
   }
+
+
+  &.quote p{
+    width: 85%;
+    font-size: var(--default);
+    --wght: 250;
+    line-height: 1.3;
+    text-indent: -0.5em;
+  }
+
+
   a{
-    color: blue;
+    color: var(--linkcolor);
     text-decoration: none;
-    border-bottom: 1px solid blue;
+    border-bottom: 0.05em solid var(--linkcolor);
     &:hover{
       text-decoration: none;
     }
   }
 
-  &.quote h3{
+  &.mix{
+    background-color: var(--txtcolor);
+    background-blend-mode: screen;
+  }
 
-    text-indent: -0.5em;
+  ul{
+    padding-left: 0;
+    
+  }
+  li{
+    list-style-type: none;
+  }
+  &.cols ul{
+    display: flex;
+
+    li{
+      flex: 1;
+      img{
+        margin-left: 0;
+        max-width: 90%;
+      }
+    }
+
   }
 
 } 
 
-.mix{
-  background-color: blue;
-  background-blend-mode: screen;
-}
-
-.caption{
-  text-align: right;
-  margin-top: 1rem;
-  display: block;
-  font-size: .7em;
-}
-
-ul{
-  padding-left: 0;
-  display: flex;
-}
-li{
-  flex: 1;
-  list-style-type: none;
-}
-li:first-child{
-  margin-right: 2rem;
-}
-
-// li::before{
-//   content:  "— ";
-//   display: block;
-// }
-
-
 .section{
-  background: blue;
+  background: var(--txtcolor);
   color: white; 
 }
-.live{
-  animation: pulse 1s ease-in-out alternate infinite;
-}
-@keyframes pulse{
-  from {
-    text-shadow: none;
-  }
-  to{
-    text-shadow: 5px 5px 10px white;
+
+.numbered {
+  padding-left: 5rem;
+  li{
+    list-style-type: decimal;
+    font-size: var(--medium);
   }
 }
 .grey{
   background: rgb(220,220,220);
 }
 .ra{
-  background: black;
+  background: rgb(20,20,20);
   color: white;
 }
 
 img, video{
  margin: auto;
  display: block;
- max-height: 600px;
+ max-height: 520px;
  max-width: 100%;
 }
-ul.cols{
-  display: flex;
-  list-style-type: none;
-  padding-left: 0;
-}
-ul li{
-  margin-right: 1rem;
-}
-ul li:last-child{
-  margin-right: 0;
-}
 
-#the-team+.cols li{
-  flex: none;
-  width: 25%;
-}
+.ul{
 
+}
 .rangebox{
   position: relative;
 }
@@ -200,12 +235,12 @@ ul li:last-child{
   top: 50%;
   height: 2px;
   margin: 0 25px;
-  border-top: 5px solid blue;
+  border-top: 5px solid var(--linkcolor);
 }
 .line::after{
   content: ">";
   font-size: 50px;
-  color: blue;
+  color: var(--linkcolor);
   font-weight: bold;
   position: absolute;
   right: -12px;
@@ -238,5 +273,81 @@ ul li:last-child{
   top: 50%;
   left: 50%;
   line-height: 0.1;
+  a{
+    border: 0;
+    color: var(--txtcolor);
+  }
+}
+
+// ANIMATIONS
+.kern-pair{
+  line-height: 1.1;
+  font-size: 200px;
+  text-align: center;
+  animation: kern 800ms linear alternate infinite;
+}
+
+@keyframes kern{
+  from {
+    font-kerning: none;
+  }
+  to {
+    font-kerning: normal;
+  }
+}
+
+.proof-pair{
+  font-size: 50px;
+  line-height: 1.5;
+}
+// .check{
+//   animation: show 1s steps(3, end) forwards infinite;
+// }
+
+// #plan{
+//   .list-build{
+//     animation: show 1s steps(3, end) forwards;
+//   }
+//   .list-build:nth-child(2){
+//     animation-delay: 1s;
+//   }
+//   .list-build:nth-child(3){
+//     animation-delay: 2s;
+//   }
+//   .list-build:nth-child(4){
+//     animation-delay: 3s;
+//   }
+//   .list-build:nth-child(5){
+//     animation-delay: 4s;
+//   }
+//   .list-build:nth-child(6){
+//     animation-delay: 5s;
+//   }
+// }
+// #progress{
+//   .list-build:nth-child(2) .check{
+//     animation-delay: 1s;
+//   }
+//   .list-build:nth-child(3) .check{
+//     animation-delay: 2s;
+//   }
+//   .list-build:nth-child(4) .check{
+//     animation-delay: 3s;
+//   }
+//   .list-build:nth-child(5) .check{
+//     animation-delay: 4s;
+//   }
+//   .list-build:nth-child(6) .check{
+//     animation-delay: 5s;
+//   }
+// }
+
+@keyframes show{
+  from{
+    visibility: hidden;
+  }
+  to{
+    visibility: visible;
+  }
 }
 
